[package]
name = "juno-rs"
version = "0.5.0"
authors = ["Jaanus Varus <jaanusvarus@gmail.com>"]
edition = "2018"

[lib]
crate-type = [
    "cdylib",  # For FFI.
    "rlib",  # For benchmarking.
]
path = "juno_rs/lib.rs"

[dependencies]
ndarray = "0.13"
ndarray-stats = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "trade_benchmark"
path = "juno_rs/benches/trade_benchmark.rs"
harness = false
