[build-system]
requires = ["setuptools>=57", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99
target-version = ["py39"]

[tool.isort]
multi_line_output = 3
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
use_parentheses = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "info"
markers = ["manual", "exchange", "plugin"]
testpaths = ["tests"]
