[package]
name = "juno_rs"
version = "0.1.0"
authors = ["discosultan <jaanusvarus@gmail.com>"]
edition = "2018"

[dependencies]
bounded-vec-deque = "0.1"
chrono = "0.4"
ezing = "0.2"
juno_derive_rs = { version = "0.1", path = "../juno_derive_rs" }
ndarray = "0.14"
ndarray-stats = "0.4"
once_cell = "1"
rand = "0.8"
rayon = "1"
regex = "1"
rusqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
criterion = "0.3"
serde_yaml = "0.8"

[[bench]]
name = "trade_benchmark"
path = "benches/trade_benchmark.rs"
harness = false
