[package]
authors = ["discosultan <jaanusvarus@gmail.com>"]
edition = "2018"
name = "juno_rs"
version = "0.1.0"

[dependencies]
bounded-vec-deque = "0.1"
chrono = "0.4"
ezing = "0.2"
futures = "0.3"
juno_derive_rs = {version = "0.1", path = "../juno_derive_rs"}
ndarray = "0.15"
ndarray-stats = "0.4"
once_cell = "1"
rand = "0.8"
rayon = "1"
regex = "1"
reqwest = {version = "0.11", features = ["native-tls", "json"], default-features = false}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.5", features = ["runtime-tokio-native-tls", "sqlite"], default-features = false}
thiserror = "1"
tokio = {version = "1", features = ["full"]}

[dev-dependencies]
criterion = "0.3"
serde_yaml = "0.8"

[[bench]]
harness = false
name = "trade_benchmark"
path = "benches/trade_benchmark.rs"
