[package]
name = "juno_warp_rs"
version = "0.1.0"
authors = ["discosultan <jaanusvarus@gmail.com>"]
edition = "2018"

[dependencies]
juno_rs = { version = "0.1", path = "../juno_rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
