[package]
name = "juno_warp_rs"
version = "0.1.0"
authors = ["discosultan <jaanusvarus@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
bytes = "1"
juno_derive_rs = { version = "0.1", path = "../juno_derive_rs" }
juno_rs = { version = "0.1", path = "../juno_rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
